# smart-baggage-architect-agent

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/airline_policies/: 6E.yaml  AA.yaml  AC.yaml  AF.yaml  AI.yaml  AS.yaml  AV.yaml  AZ.yaml  B6.yaml  BA.yaml  CA.yaml  CI.yaml  CX.yaml  CZ.yaml  DL.yaml  EK.yaml  ET.yaml  EY.yaml  F9.yaml  FR.yaml  G3.yaml  GA.yaml  JL.yaml  KE.yaml  KL.yaml  KQ.yaml  LA.yaml  LH.yaml  LX.yaml  MH.yaml  MS.yaml  MU.yaml  NH.yaml  NK.yaml  NZ.yaml  OS.yaml  OZ.yaml  PR.yaml  QF.yaml  QR.yaml  (+10 more)
backend/app/: __init__.py  config.py  main.py
backend/app/db/: schema.sql  seed.py
backend/app/middleware/: auth.py  rate_limit.py
backend/app/models/: __init__.py  airline.py  packing.py  trip.py
backend/app/routers/: airline.py  feedback.py  knowledge.py  llm.py  packing.py  trip.py  vision.py  weather.py
backend/app/services/: __init__.py  airline_policy.py  airline_scraper.py  bin_packing.py  clip_fallback.py  database.py  feedback.py  knapsack.py  knowledge_crawler.py  llm_orchestrator.py  logger.py  packing_list.py  weather.py  yolo_pipeline.py
backend/scripts/: download_models.py
backend/tests/: test_airline_policy.py  test_bin_packing.py  test_knapsack.py  test_packing_list.py  test_weather.py
docs/: phase0-research-summary.md
mobile/: .eslintrc.json  .prettierignore  App.tsx  app.json  package-lock.json  (+2 more)
(+14 files in other folders)
